# zed-docs-l10n

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  versions.json
.github/workflows/: ci-check-pr-status.yml  ci-mdbook-update-pot.yml
cmake/custom/: crowdin.yml  head.hbs  ltd-config.js
cmake/custom/backup/main/docs/: book.toml
cmake/custom/patch/latest/docs/: book.toml
cmake/targets/: create_rtd_symlinks.cmake  crowdin_download_po.cmake  crowdin_upload_po.cmake  crowdin_upload_pot.cmake  gettext_compendium.cmake  gettext_statistics.cmake  gettext_update_po.cmake  install_requirements.cmake  mdbook_build_docs.cmake  mdbook_update_pot.cmake  prepare_repositories.cmake
docs/: ERROR-cargo-install.md  ERROR.md  log.txt
